logs/xmi2odoo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/xmi2odoo'...
Compiling './lib/python3.5/site-packages/xmi2odoo/builder.py'...
***   File "./lib/python3.5/site-packages/xmi2odoo/builder.py", line 94
    except UnicodeEncodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmi2odoo/data'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/licenses'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/data'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/i18n'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/images'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/report'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/security'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/test'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/view'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/wizard'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/7.0/workflow'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/data'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/i18n'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/images'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/report'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/security'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/test'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/view'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/wizard'...
Listing './lib/python3.5/site-packages/xmi2odoo/data/template/8.0/workflow'...
Compiling './lib/python3.5/site-packages/xmi2odoo/model.py'...
***   File "./lib/python3.5/site-packages/xmi2odoo/model.py", line 345
    raise RuntimeError, 'File not found. Search paths: %s' % querypaths
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmi2odoo/scripts'...
Listing './lib/python3.5/site-packages/xmi2odoo/test'...
Compiling './lib/python3.5/site-packages/xmi2odoo/uml.py'...
***   File "./lib/python3.5/site-packages/xmi2odoo/uml.py", line 228
    raise RuntimeError, 'prev_leafs loop cant stop'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmi2odoo-1.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
